--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ navbar-links:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://mb4511.com"
+  Author's home: "https://mb4511.github.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -72,10 +72,8 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+  email: "mb4511@columbia.edu"
+  linkedin: https://www.linkedin.com/in/mayurbansal16/
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -91,8 +89,6 @@ social-network-links:
 
 # Select which share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
   linkedin: true
 
 # How to display the link to the website in the footer
