--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ author:
 social-network-links:
   rss: true
   email: "mb4511@columbia.edu"
-  linkedin: "in/mayurbansal16"
+# linkedin: "https://www.linkedin.com/in/mayurbansal16/"
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
