--- a/_config.yml
+++ b/_config.yml
@@ -73,19 +73,8 @@ author:
 social-network-links:
   rss: true
   email: "mb4511@columbia.edu"
-# linkedin: "https://www.linkedin.com/in/mayurbansal16/"
-#  reddit: yourname
-#  linkedin: daattali
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  youtube: user/deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
+#  linkedin: mayurbansal16
+
 
 # Select which share links to show in posts
 share-links-active:
