--- a/_config.yml
+++ b/_config.yml
@@ -73,11 +73,13 @@ social-network-links:
   rss: true
   email: "mb4511@columbia.edu"
   linkedin: "mayurbansal16"
+  medium: "@mb4511"
 
 
 # Select which share links to show in posts
 share-links-active:
   linkedin: true
+  medium: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
