--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ social-network-links:
   rss: true
   email: "mb4511@columbia.edu"
   linkedin: "mayurbansal16"
-  medium: "@mb4511"
+  medium: "https://medium.com/@mb4511"
 
 
 # Select which share links to show in posts
