--- a/_data/SocialNetworks.yml
+++ b/_data/SocialNetworks.yml
@@ -90,3 +90,9 @@ yelp:
   name: "Yelp"
   baseURL: "https://{{ site.author.yelp }}.yelp.com"
   icon: "fa-yelp"
+  
+medium:
+  name: "medium"
+  baseURL: "https://medium.com/"
+  icon: "fa-medium"
+
