--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   About Me: "aboutme"
   Resources:
     - Article on NLP: "https://towardsdatascience.com/decoding-the-output-of-a-hybrid-recommendation-system-2007d85547bf?source=friends_link&sk=d9e76170ea3cb993de3321645050ca0e"
-    - GitHub Page: "https://github.com/MB4511"
+    - GitHub Page: "@MB4511"
   Author's home: "https://mb4511.github.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
