my data journey as description

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Mayur Bansal
 
 # Short description of your site
-description: My data journey
+description: "My data journey"
 
 # --- Navigation bar options --- #
 
